--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
             <div class="activities-title"><h3>Top Three City to do at Indonesia</h3></div>
             <div class="city-section-content">
                 <div id="city-section">
-                    <img id="city-img" src="images/bundaran_hi.JPG"></img>
+                    <img id="city-img" src="bundaran_hi.JPG"></img>
                     <h3>Jakarta</h3>
                     <h4>Jakarta is the biggest city in Indonesia</h4>
                 </div>
                 <div id="city-section">
-                    <img id="city-img" src="images/Borobudur.jpg"></img>
+                    <img id="city-img" src="Borobudur.jpg"></img>
                     <h3>Java</h3>
                     <h4>Borobudur is the largest Buddhist temple in the world, located at Central of Java, Magelang city</h4>
                 </div>
                 <div id="city-section">
-                    <img id="city-img" src="images/Bali.jpg"></img>
+                    <img id="city-img" src="Bali.jpg"></img>
                     <h3>Bali</h3>
                     <h4>Bali island is a small beautiful island and a part of Indonesia's archipelago, and the most famous of tourism in the world</h4>
                  </div>
@@ -30,7 +30,7 @@
         </div>
         <div class="card">
             <div class="information">
-                <img id="avatar" src="images/Andri.JPG">
+                <img id="avatar" src="Andri.JPG">
                 <div>
                     <h2>Your guide</h2>
                     <p><em>"I have lived in Indonesia for over 35 years, so i can show you all of its best parts and hidden secrets."</em></p>
